# eotransform

./: .gitlab-ci.yml  .readthedocs.yml  CITATION.cff  Makefile  README.md  data.json  setup.cfg  tox.ini
.github/workflows/: publish.yml  test.yml  (+1 more)
docs/: api.rst  conf.py  index.rst  install.rst
htmlcov/: d_4c9af4ebf5f6f7fe_apply_to_enumeration_py.html  d_4c9af4ebf5f6f7fe_chain_py.html  d_4c9af4ebf5f6f7fe_compose_py.html  d_4c9af4ebf5f6f7fe_identity_py.html  d_4c9af4ebf5f6f7fe_map_py.html  d_4c9af4ebf5f6f7fe_repeat_py.html  d_4c9af4ebf5f6f7fe_result_py.html  d_4c9af4ebf5f6f7fe_send_to_stream_py.html  d_4c9af4ebf5f6f7fe_to_tuple_py.html  d_4c9af4ebf5f6f7fe_with_performance_clock_py.html  d_8f98a2a232c032e0_filtered_py.html  d_8f98a2a232c032e0_result_py.html  d_8f98a2a232c032e0_sink_to_progress_report_py.html  d_8f98a2a232c032e0_with_performance_clock_py.html  d_e24c8e1f1d27717d_profiling_py.html  d_eaefafe56ffb7220___init___py.html  d_eaefafe56ffb7220__version_py.html  d_eaefafe56ffb7220_apply_py.html  d_eaefafe56ffb7220_collection_transformation_py.html  d_eaefafe56ffb7220_result_py.html  d_eaefafe56ffb7220_streamed_process_py.html  d_fd914b1cfdc7b9b2_sink_py.html  d_fd914b1cfdc7b9b2_stream_py.html  d_fd914b1cfdc7b9b2_transformer_py.html  index.html  status.json
tests/: conftest.py  test_doc_examples.py  test_meta.py  test_result_transformations.py  test_sink_filtered.py  test_sink_with_performance_clock.py  test_streamed_process_from_source_to_sink.py  test_transform_identity.py  test_transform_with_performance_clock.py  test_utilities_profiling.py
(+70 files in other folders)
