[metadata]
name = eotransform
version = attr: eotransform.__version__
description = Protocol definition for streamed source/transform/sink process
author = TU Wien GEO MRS group
author_email = remote.sensing@geo.tuwien.ac.at
long_description = file: README.md
url = https://git.eodc.eu/tuwien/eotransform
platforms = any

[options]
package_dir =
    = src
packages = find:
install_requires = more-itertools

[options.packages.find]
where=src

[options.extras_require]
test = pytest, pytest-cov
